--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body ::-webkit-scrollbar {
 }
 @layer components {
   .input {
-    @apply w-full rounded-full border
+    @apply rounded-full border
     border-stone-200 px-4 py-2 text-sm
     transition-all duration-300
     placeholder:text-stone-400
